# DAW-coreengine

./: ARCHITECTURE.md  CMakeLists.txt  README.md  main.cpp  main_interactive.cpp  start_ui.sh  test_interactive.sh
frontend/: README.md  index.html  package.json  tsconfig.electron.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  App.tsx  index.css  store.ts
frontend/src/components/: Inspector.css  Inspector.tsx  LuaPluginManager.css  LuaPluginManager.tsx  PianoRoll.css  PianoRoll.tsx  SampleBrowser.css  SampleBrowser.tsx  Timeline.css  Timeline.tsx  TrackList.css  TrackList.tsx  TransportBar.css  TransportBar.tsx
frontend/src/helpers/: engine.ts  music.ts  trackScroll.ts
frontend/src/hooks/: useKeyboardShortcuts.ts
src/: CoreServiceEngine.cpp  CoreServiceEngine.h
src/commands/: Command.cpp  Command.h  CommandAPI.cpp  CommandAPI.h  CommandBuilder.h  CommandJSONParser.cpp  CommandJSONParser.h  CommandQueue.cpp  CommandQueue.h
src/configs/: EngineConfig.cpp  EngineConfig.h
src/input/: KeyboardHandler.h
src/plugins/: LuaPlugin.cpp  LuaPlugin.h  Plugin.h  PluginManager.cpp  PluginManager.h
src/render_loop/: RenderLoop.cpp  RenderLoop.h
src/render_loop/audio/: ADSR.h  AudioBlock.h  AudioBuffer.h  AudioEffect.h  EffectChain.h  Instrument.h  Oscillator.h  SamplePlayer.h  Sequencer.h  SynthFactory.h  Timeline.h  TimelineEvent.h  Track.h  Voice.h  VoiceFactory.h  simd_ops.h  utils.h
src/render_loop/audio/effects/: DelayEffect.h  DistortionEffect.h  ReverbEffect.h
src/render_loop/audio/simple_sounds/: SawtoothOscillator.h  SimpleSynth.cpp  SimpleSynth.h  SineOscillator.cpp  SineOscillator.h  SquareOscillator.h
